[tool.poetry]
name = "abq"
version = "0.1.1"
description = ""
authors = ["sakuv2 <loots2438@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = {extras = ["dotenv"], version = "^1.5.1"}
google-cloud-bigquery = "^1.25.0"
httpx = "0.13.3"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"
syncer = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
